[package]
name = "redisjson"
version = "0.3.0"
authors = ["Gavrie Philipson <gavrie@redislabs.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bson = "0.13.0"
serde_json = "1.0"
libc = "0.2"
jsonpath_lib = { git="https://github.com/freestrings/jsonpath.git", branch="master" }
redismodule = { git = "https://github.com/RedisLabsModules/redismodule-rs.git", branch = "master" }
