[package]
name = "redisjson"
version = "0.3.0"
authors = ["Gavrie Philipson <gavrie@redislabs.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
serde_json = "1.0"
libc = "0.2"
jsonpath_lib = { git="https://github.com/freestrings/jsonpath.git", branch="master" }
redismodule = { path = "../redismodule-rs" }
redisearch_api = { path = "../redisearch-api-rs" }

